add postgres and modify connection string

--- a/AllianzSampleXaf.Blazor.Server/appsettings.json
+++ b/AllianzSampleXaf.Blazor.Server/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "ConnectionString": "Integrated Security=SSPI;Pooling=true;MultipleActiveResultSets=true;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=AllianzSampleXaf",
+    "ConnectionString": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres;Pooling=true;Trust Server Certificate=true;",
     "EasyTestConnectionString": "Integrated Security=SSPI;Pooling=true;MultipleActiveResultSets=true;Data Source=(localdb)\\mssqllocaldb;Initial Catalog=AllianzSampleXafEasyTest"
   },
   "Logging": {
